infrastructure/networking/API-Gateway-KrakenD/manifests/api-gateway-krakend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-krakend
  namespace: citizens-folder
spec:
  selector:
    matchLabels:
      app: api-gateway-krakend
  replicas: 1
  template:
    metadata:
      labels:
        app: api-gateway-krakend
    spec:
      containers:
      - name: api-gateway-krakend
        image: spbpatino/citizens-folder-api-gateway:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        command: [ "/usr/bin/krakend" ]
        args: [ "run", "-d", "-c", "/etc/krakend/krakend.json", "-p", "8080" ]
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          runAsUser: 1000
          readOnlyRootFilesystem: true
          capabilities:
            drop:
              - ALL
            add:
              - NET_BIND_SERVICE
        resources:
          requests:
            cpu: "500m"
            memory: "64Mi"
          limits:
            cpu: "1"
            memory: "256Mi"
        readinessProbe:
          httpGet:
            path: /__health
            port: 8080
        livenessProbe:
          httpGet:
            path: /__health
            port: 8080
