infrastructure/networking/API-Gateway-KrakenD/manifests/api-gateway-krakend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-krakend
  namespace: citizens-folder
spec:
  type: NodePort
  ports:
  - name: http
    port: 8000
    protocol: TCP
    targetPort: 8080
    nodePort: 30000
  selector:
    app: api-gateway-krakend
