infrastructure/networking/API-Gateway-KrakenD/manifests/api-gateway-krakend-proxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: api-gateway-krakend
  namespace: citizens-folder
spec:
  virtualhost:
    fqdn: api.fastidentify.com
    #tls:
    #  secretName: api-ambassador-tls
    corsPolicy:
        allowCredentials: true
        allowOrigin:
          - "*"
        allowMethods:
          - HEAD 
          - OPTIONS
          - POST
          - PATCH
          - GET
          - PUT
          - DELETE
        allowHeaders:
          - "*"
        exposeHeaders:
          - Content-Length
          - Content-Range
        maxAge: "10m"
  routes:
    - conditions:
      - prefix: /
      services:
        - name: api-gateway-krakend
          port: 8000
